--- a/JS_lesson8/lesson8homework.html
+++ b/JS_lesson8/lesson8homework.html
@@ -6,7 +6,6 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <script src="script.js"></script>
 </head>
 <body>
 <p id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis cupiditate deleniti
@@ -14,7 +13,7 @@
     Dolore hic in quae sed.
 </p>
 
-<div id="rules" class="fc bp">
+<div id="rules" class="fc_bp">
     Первое правило Бойцовского клуба: никому не рассказывать о Бойцовском клубе. Второе правило Бойцовского
     клуба: никогда никому не рассказывать о Бойцовском клубе. Третье правило Бойцовского клуба: в схватке
     участвуют только двое. Четвертое правило Бойцовского клуба: не более одного поединка за один раз
@@ -30,6 +29,7 @@
     </li>
     <li class="fc_rules rule4">Четвертое правило Бойцовского клуба: не более одного поединка за один раз</li>
 </ul>
+<script src="script.js"></script>
 
 </body>
 </html>
