--- a/JS_lesson8/lesson_8homework.html
+++ b/JS_lesson8/lesson_8homework.html
@@ -29,7 +29,7 @@
     </li>
     <li class="fc_rules rule4">Четвертое правило Бойцовского клуба: не более одного поединка за один раз</li>
 </ul>
-<script src="script.js"></script>
+<script src="script_homework.js"></script>
 
 </body>
 </html>
