--- a/JS_lesson1/lesson_1classwork.html
+++ b/JS_lesson1/lesson_1classwork.html
@@ -21,7 +21,7 @@
     /*2. Створити об'єкт book з наступними полями  - назва, кількість сторінок, жанр*/
 
     let book={
-        title:'Killer',
+        title:'Killer.',
         pages:'400',
         genre:'detective'
     }
